some more stuff
there

--- a/index.html
+++ b/index.html
@@ -2,11 +2,53 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/bootstrap.css" media="screen" charset="utf-8"></link>
+    <link rel="stylesheet" href="css/bootstrap-theme.css" media="screen" charset="utf-8"></link>
     <link rel="stylesheet" href="css/main.css" media="screen" charset="utf-8"></link>
+
     <title>Cleanly</title>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <h1>cleanly</h1>
+
+
+      <p></p>
+      <div class="row">
+        <h1></h1>
+        <div class="col-md-2 col-md-offset-4">News</div>
+        <div class="col-md-2">Information</div>
+        <div class="col-md-2">Suport</div>
+        <div class="col-md-2">Contact</div>
+      </div>
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-2">Businesses</div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-2">Cleaning</div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-2">Gardening</div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+      </div>
+
 
   </body>
+
+  <!-- N0ot wrking atm - will fix when needed -->
+  <script src="https://code.jquery.com/jquery-2.1.4.js" charset="utf-8"></script>
+  <script src="js/bootstrap.js" charset="utf-8"></script>
 </html>
