--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 
 <body>
   <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-  <h1 class="">cleanly.com</h1>
-  </div>
-</nav>
+    <div class="container">
+      <div class="bs-example bs-example-tabs" data-example-id="togglable-tabs">
+        <ul id="myTabs" class="nav nav-tabs" role="tablist">
+          <li role="presentation" class="active">
+          <li><h1 class="">cleanly.com</h1></li>
+          <li><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Login</button></li>
+          <li><button type="button" class="btn btn-primary btn-lg"><a href="#">Register</a></button></li>
+      </div>
+    </div>
+  </nav>
 
 
   <div class="row">
@@ -25,13 +31,11 @@
   <div class="row">
     <h1></h1>
 
-
     <div class="col-md-2 col-offset-2">
       <ul class="list-group">
         <li ><a href="#" class="list-group-item">Business</a></li>
         <li ><a href="#" class="list-group-item">Cleaning</a></li>
         <li ><a href="#" class="list-group-item">Gardening</a></li>
-        <li ><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Login</button></li>
 
     </div>
 
@@ -83,18 +87,18 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title">Modal title</h4>
+              <h4 class="modal-title">Log in</h4>
             </div>
             <div class="modal-body">
-              <p>One fine body&hellip;</p>
+              <p>log in interface goes here&hellip;</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-primary">Log In</button>
             </div>
-          </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-      </div><!-- /.modal -->
+          </div>
+        </div>
+      </div>
     </body>
 
 <!-- N0ot wrking atm - will fix when needed -->
