--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
   <div class="row">
     <h1></h1>
 
-    <div class="col-md-2 col-offset-2">
-      <ul class="list-group">
-        <li ><a href="#" class="list-group-item">Business</a></li>
-        <li ><a href="#" class="list-group-item">Cleaning</a></li>
-        <li ><a href="#" class="list-group-item">Gardening</a></li>
-
+    <div class="col-md-2">
+      <div class="button-group">
+        <button class="list-group-item">Business</button>
+        <button class="list-group-item">Cleaning</button>
+        <button class="list-group-item">Gardening</button>
+      </div>
     </div>
 
     <div class="col-md-8">
