--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       <div class="bs-example bs-example-tabs" data-example-id="togglable-tabs">
         <ul id="myTabs" class="nav nav-tabs" role="tablist">
           <li role="presentation" class="active">
-          <li><h1 class="">cleanly.com</h1></li>
-          <li><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Login</button></li>
-          <li><button type="button" class="btn btn-primary btn-lg"><a href="#">Register</a></button></li>
+          <li><h1 class="col-md-3">cleanly.com</h1></li>
+          <li class="pull-right"><button type="button" class="btn btn-default navbar-btn" data-toggle="modal" data-target="#myModal">Login</button></li>
+          <li class="pull-right"><button type="button" class="btn btn-default navbar-btn"><a href="#">Register</a></button></li>
+        </ul>
       </div>
     </div>
   </nav>
